Updated navbar css to fix name wrap
Changed text-wrap to no wrap. This solves the issue of my name on the navigation bar wrapping on bigger screen sizes.

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,6 +30,7 @@
     font-size: 2rem;
     display: flex;
     align-items: center;
+    text-wrap: nowrap;
 }
   
 .fa-typo3 {
